# toy_emulator

./: .travis.yml  CMakeLists.txt  README.md
emulator/: CMakeLists.txt  Main.cpp
emulator/include/: Emulator.h  Instruction.def  Instruction.h  Memory.h  RegisterFile.h
emulator/src/: Emulator.cpp  Instruction.cpp  Memory.cpp  RegisterFile.cpp
test/: CMakeLists.txt  verifier.cpp
